fix font bug in dark mode

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -452,7 +452,7 @@ body {
     @media (max-width: 576px) {
         #home p {
             text-align: center;
-            color: black
+            color: black !important;
         }
         #home .social-media {
             text-align: center;
@@ -467,13 +467,14 @@ body {
         #contact h1 {
             margin-top: 35px;
             text-align: center;
-            color: black;
+            color: black !important;
         }
 
         #about p,
         #quotes p,
         #home p {
             font-size: x-large;
+            color: black !important;
         }
 
         #portfolios .card {
